Show useragent info in index page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,8 +103,9 @@
 }());
 </script>
 
-{{#if apples}}
-  <h1>{{apples.data}} </h1>
+{{#if userData}}
+  <h1>Welcome, {{userData.browserFamily}} user</h1>
+  <h1>Your IP is {{userData.ipAddress}}</h1>
 {{else}}
   <h1> Some thing went wrong </h1>
 {{/if}}
