--- a/views/testing.hbs
+++ b/views/testing.hbs
@@ -1,5 +1,8 @@
 <html>
-<script>
+<head>
+    <script src="/index.js", type="text/javascript"></script>
+</head>
+<!-- <script>
 (function(){
 	var networks = [{
         url: "https://squareup.com/login?return_to=%2Ffavicon.ico",
@@ -97,7 +100,7 @@
         };
     });
 }());
-</script>
+</script> -->
 
 <div>
     <h1 id='greeting'>Hello, YOURNAME</h1>
