Facebook Auth Stuff

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,6 +103,8 @@
 }());
 </script>
 
+<h2> <a href="/login/facebook"> Click here to login with Facebook </a>
+
 {{#if userData}}
   <h1>Welcome, {{userData.browserFamily}} user</h1>
   <h1>Your IP is {{userData.ipAddress}}</h1>
