--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,6 +16,39 @@
 </script>
 </div>
 
+<div id="theMapMyGuy">
+
+	<head>
+    <style>
+       #map {
+        height: 400px;
+        width: 100%;
+       }
+    </style>
+  </head>
+  <body>
+    <h3>My Google Maps Demo</h3>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 42.360082, lng: -71.058880};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
+    </script>
+  </body>
+
+</diV>
+
 <p id = 'socialMedia'></p>
 
 
@@ -88,7 +121,7 @@
             url: "https://accounts.google.com/ServiceLogin?service=blogger&hl=de&passive=1209600&continue=https://www.blogger.com/favicon.ico",
             name: "Blogger"
         }];
-        
+
 
 
         function print(msg,color) {
