--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,6 +51,10 @@
 
 <p id = 'socialMedia'></p>
 
+<div id = "fb">
+	<h1> <a href = "/login/facebook"> Click here to login with Facebook! </a> </h1>
+</div>
+
 
 <script>
     (function(){
