Add feature blocks and battery info

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,9 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Data Drives Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 		<!--[if lte IE 8]>
 		<script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,6 +19,7 @@
 		<link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
 		<!--[if lte IE 8]>
 		<link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
+
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -26,9 +30,10 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.hbs" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a>
+								<!--<a href="index.hbs" class="logo">-->
+									<!--<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Data Drives Us</span>-->
+								<!--</a>-->
+
 
 							<!-- Nav -->
 								<nav>
@@ -56,143 +61,52 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>Data drives us.</h1>
+								<p>Data is everywhere in 2018. Now more than ever, it's important to understand what info can be discovered just from one short visit to a website.</p>
 							</header>
+
 							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Magna</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Lorem</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.hbs">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+
+                                <div class="feature left">
+                                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+                                    <div class="content">
+                                        <h2>Your location: (boston college)</h2>
+                                        <p>Websites can find this from your IP, (ip goes here), and Google's geolocation API, anyone can know your location.</p>
+                                        <ul class="actions">
+                                            <li>
+                                                <a href="#" class="button alt">More</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="feature right">
+                                    <span class="image"><img src="images/pic02.jpg" alt="" /></span>
+                                    <div class="content">
+                                        <h2>Lambs to the cosmic slaughter</h2>
+                                        <span>Your battery is at </span>
+                                        <span id="battery-content"></span>
+                                        <span> percent</span>
+                                        <script>
+                                            var battery = navigator.getBattery().then(result => {
+                                                console.log(result);
+                                            var para = document.createElement("span");
+                                            var node = document.createTextNode(result.level);
+
+                                            para.appendChild(node);
+                                            var element = document.getElementById("battery-content");
+                                            element.appendChild(para);
+                                            })
+                                            .catch(error => console.log(error));
+                                        </script>
+                                        <ul class="actions">
+                                            <li>
+                                                <a href="#" class="button alt">More</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
 							</section>
 						</div>
 					</div>
@@ -200,38 +114,38 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
+							<!--<section>-->
+								<!--<h2>Get in touch</h2>-->
+								<!--<form method="post" action="#">-->
+									<!--<div class="field half first">-->
+										<!--<input type="text" name="name" id="name" placeholder="Name" />-->
+									<!--</div>-->
+									<!--<div class="field half">-->
+										<!--<input type="email" name="email" id="email" placeholder="Email" />-->
+									<!--</div>-->
+									<!--<div class="field">-->
+										<!--<textarea name="message" id="message" placeholder="Message"></textarea>-->
+									<!--</div>-->
+									<!--<ul class="actions">-->
+										<!--<li><input type="submit" value="Send" class="special" /></li>-->
+									<!--</ul>-->
+								<!--</form>-->
+							<!--</section>-->
+							<!--<section>-->
+								<!--<h2>Follow</h2>-->
+								<!--<ul class="icons">-->
+									<!--<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>-->
+									<!--<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>-->
+								<!--</ul>-->
+							<!--</section>-->
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Data Drives Us. All rights reserved</li><li>Design adapted from <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
