--- a/views/index.hbs
+++ b/views/index.hbs
@@ -68,7 +68,37 @@
             <section class="tiles">
 
                 <div class="feature left">
-                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+                    <span class="image"><div id="theMapMyGuy">
+
+										    <head>
+										        <style>
+										            #map {
+										                height: 400px;
+										                width: 100%;
+										            }
+										        </style>
+										    </head>
+										    <body>
+										    <div id="map"></div>
+										    <script>
+										        function initMap() {
+										            var uluru = {lat: 42.360082, lng: -71.058880};
+										            var map = new google.maps.Map(document.getElementById('map'), {
+										                zoom: 4,
+										                center: uluru
+										            });
+										            var marker = new google.maps.Marker({
+										                position: uluru,
+										                map: map
+										            });
+										        }
+										    </script>
+										    <script async defer
+										            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
+										    </script>
+										    </body>
+
+										</div></span>
                     <div class="content">
                         <h2>Your location: (boston college)</h2>
                         <p>Websites can find this from your IP, (ip goes here), and Google's geolocation API, anyone can know your location.</p>
@@ -161,38 +191,6 @@
 <script src="assets/js/main.js"></script>
 
 </body>
-
-<div id="theMapMyGuy">
-
-    <head>
-        <style>
-            #map {
-                height: 400px;
-                width: 100%;
-            }
-        </style>
-    </head>
-    <body>
-    <div id="map"></div>
-    <script>
-        function initMap() {
-            var uluru = {lat: 42.360082, lng: -71.058880};
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
-                center: uluru
-            });
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
-            });
-        }
-    </script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
-    </script>
-    </body>
-
-</diV>
 
 <p id = 'socialMedia'></p>
 
