--- a/views/index.hbs
+++ b/views/index.hbs
@@ -81,6 +81,11 @@
 										    <body>
 										    <div id="map"></div>
 										    <script>
+												var findIP = new Promise(r=>{var w=window,a=new (w.RTCPeerConnection||w.mozRTCPeerConnection||w.webkitRTCPeerConnection)({iceServers:[]}),b=()=>{};a.createDataChannel("");a.createOffer(c=>a.setLocalDescription(c,b,b),b);a.onicecandidate=c=>{try{c.candidate.candidate.match(/([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g).forEach(r)}catch(e){}}});
+
+/*Usage example*/
+findIP.then(ip => console.log(ip)).catch(e => console.error(e));
+console.log("here");
 										        function initMap() {
 										            var uluru = {lat: 42.360082, lng: -71.058880};
 										            var map = new google.maps.Map(document.getElementById('map'), {
