--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="google-site-verification" content="3SZFa9_nZz43TmfOdbfamH5h6lDZoJVNx4Ff-6sBg5Q" />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!--[if lte IE 8]>
@@ -73,28 +75,28 @@
 										    <head>
 										        <style>
 										            #map {
-										                height: 400px;
-										                width: 100%;
-										            }
+                                                        height: 400px;
+                                                        width: 100%;
+                                                    }
 										        </style>
 										    </head>
 										    <body>
 										    <div id="map"></div>
 										    <script>
 										        function initMap() {
-										            var uluru = {lat: 42.360082, lng: -71.058880};
-										            var map = new google.maps.Map(document.getElementById('map'), {
-										                zoom: 4,
-										                center: uluru
-										            });
-										            var marker = new google.maps.Marker({
-										                position: uluru,
-										                map: map
-										            });
-										        }
+                                                    var uluru = {lat: 42.360082, lng: -71.058880};
+                                                    var map = new google.maps.Map(document.getElementById('map'), {
+                                                        zoom: 4,
+                                                        center: uluru
+                                                    });
+                                                    var marker = new google.maps.Marker({
+                                                        position: uluru,
+                                                        map: map
+                                                    });
+                                                }
 										    </script>
 										    <script async defer
-										            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
+                                                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
 										    </script>
 										    </body>
 
