--- a/views/index.hbs
+++ b/views/index.hbs
@@ -67,6 +67,8 @@
 
             <section class="tiles">
 
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
+
                 <div class="feature left">
                     <span class="image"><div id="theMapMyGuy">
 
@@ -81,15 +83,10 @@
 										    <body>
 										    <div id="map"></div>
 										    <script>
-												var findIP = new Promise(r=>{var w=window,a=new (w.RTCPeerConnection||w.mozRTCPeerConnection||w.webkitRTCPeerConnection)({iceServers:[]}),b=()=>{};a.createDataChannel("");a.createOffer(c=>a.setLocalDescription(c,b,b),b);a.onicecandidate=c=>{try{c.candidate.candidate.match(/([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g).forEach(r)}catch(e){}}});
-
-/*Usage example*/
-findIP.then(ip => console.log(ip)).catch(e => console.error(e));
-console.log("here");
 										        function initMap() {
 										            var uluru = {lat: 42.360082, lng: -71.058880};
 										            var map = new google.maps.Map(document.getElementById('map'), {
-										                zoom: 4,
+										                zoom: 14,
 										                center: uluru
 										            });
 										            var marker = new google.maps.Marker({
@@ -102,6 +99,7 @@ console.log("here");
 										            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
 										    </script>
 										    </body>
+
 
 										</div></span>
                     <div class="content">
