--- a/views/index.hbs
+++ b/views/index.hbs
@@ -104,7 +104,7 @@
 										</div></span>
                     <div class="content">
                         <h2>Your location: (boston college)</h2>
-                        <p>Websites can find this from your IP, (ip goes here), and Google's geolocation API, anyone can know your location.</p>
+                        <p>Websites can find this from your IP, {{ipAddress}}, and Google's geolocation API, anyone can know your location.</p>
                         <ul class="actions">
                             <li>
                                 <a href="#" class="button alt">More</a>
