--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
+    <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
 
 </head>
 <body>
@@ -82,33 +83,12 @@
 										    </head>
 										    <body>
 										    <div id="map"></div>
-										    <script>
-												var findIP = new Promise(r=>{var w=window,a=new (w.RTCPeerConnection||w.mozRTCPeerConnection||w.webkitRTCPeerConnection)({iceServers:[]}),b=()=>{};a.createDataChannel("");a.createOffer(c=>a.setLocalDescription(c,b,b),b);a.onicecandidate=c=>{try{c.candidate.candidate.match(/([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g).forEach(r)}catch(e){}}});
-
-/*Usage example*/
-findIP.then(ip => console.log(ip)).catch(e => console.error(e));
-console.log("here");
-										        function initMap() {
-                                                    var uluru = {lat: 42.360082, lng: -71.058880};
-                                                    var map = new google.maps.Map(document.getElementById('map'), {
-                                                        zoom: 4,
-                                                        center: uluru
-                                                    });
-                                                    var marker = new google.maps.Marker({
-                                                        position: uluru,
-                                                        map: map
-                                                    });
-                                                }
-										    </script>
-										    <script async defer
-                                                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
-										    </script>
 										    </body>
 
 										</div></span>
                     <div class="content">
                         <h2>Your location: (boston college)</h2>
-                        <p>Websites can find this from your IP, (ip goes here), and Google's geolocation API, anyone can know your location.</p>
+                        <p>Websites can find this from your IP, <span id="theIP"></span>, and Google's geolocation API, anyone can know your location.</p>
                         <ul class="actions">
                             <li>
                                 <a href="#" class="button alt">More</a>
@@ -120,26 +100,14 @@ console.log("here");
                 <div class="feature right">
                     <span class="image"><img src="images/pic02.jpg" alt="" /></span>
                     <div class="content">
-                        <h2>Lambs to the cosmic slaughter</h2>
-                        <span>Your battery is at </span>
+                        <h2>They can check your battery percentage</h2>
+                        <span>Your battery is at: </span>
                         <span id="battery-content"></span>
                         <span> percent</span>
-                        <script>
-                            var battery = navigator.getBattery().then(result => {
-                                console.log(result);
-                            var para = document.createElement("span");
-                            var node = document.createTextNode(result.level);
-
-                            para.appendChild(node);
-                            var element = document.getElementById("battery-content");
-                            element.appendChild(para);
-                            })
-                            .catch(error => console.log(error));
-                        </script>
                         <ul class="actions">
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="button alt">More</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -196,102 +164,16 @@ console.log("here");
 <!--[if lte IE 8]>
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.js"></script>
+<script type="text/javascript" src="assets/js/index.js"></script>
+<script async defer 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCApF0Od0ihyPwYVFrqrFy961F7RCpZOPA&callback=initMap">
+</script>
 
 </body>
 
 <p id = 'socialMedia'></p>
-
 <div id = "fb">
     <h1> <a href = "/login/facebook"> Click here to login with Facebook! </a> </h1>
 </div>
-
-
-<script>
-    (function(){
-        var networks = [{
-            url: "https://squareup.com/login?return_to=%2Ffavicon.ico",
-            name: "Square"
-        }, {
-            url: "https://www.instagram.com/accounts/login/?next=%2Ffavicon.ico",
-            name: "Instagram"
-        }, {
-            url: "https://twitter.com/login?redirect_after_login=%2Ffavicon.ico",
-            name: "Twitter"
-        }, {
-            url: "https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Ffavicon.ico%3F_rdr%3Dp",
-            name: "Facebook"
-        }, {
-            url: "https://accounts.google.com/ServiceLogin?passive=true&continue=https%3A%2F%2Fwww.google.com%2Ffavicon.ico&uilel=3&hl=de&service=youtube",
-            name: "Google"
-        },, {
-            url: "https://plus.google.com/up/accounts/upgrade/?continue=https://plus.google.com/favicon.ico",
-            name: "Google Plus"
-        }, {
-            url: "https://login.skype.com/login?message=signin_continue&redirect_uri=https%3A%2F%2Fsecure.skype.com%2Ffavicon.ico",
-            name: "Skype"
-        }, {
-            url: "https://www.flickr.com/signin/yahoo/?redir=https%3A%2F%2Fwww.flickr.com/favicon.ico",
-            name: "Flickr"
-        }, {
-            url: "https://www.spotify.com/de/login/?forward_url=https%3A%2F%2Fwww.spotify.com%2Ffavicon.ico",
-            name: "Spotify"
-        }, {
-            url: "https://www.reddit.com/login?dest=https%3A%2F%2Fwww.reddit.com%2Ffavicon.ico",
-            name: "Reddit"
-        }, {
-            url: "https://www.tumblr.com/login?redirect_to=%2Ffavicon.ico",
-            name: "Tumblr"
-        }, {
-            url: "https://www.expedia.de/user/login?ckoflag=0&selc=0&uurl=qscr%3Dreds%26rurl%3D%252Ffavicon.ico",
-            name: "Expedia"
-        }, {
-            url: "https://www.dropbox.com/login?cont=https%3A%2F%2Fwww.dropbox.com%2Fstatic%2Fimages%2Ficons%2Ficon_spacer-vflN3BYt2.gif",
-            name: "Dropbox"
-        }, {
-            url: "https://www.amazon.com/ap/signin/178-4417027-1316064?_encoding=UTF8&openid.assoc_handle=usflex&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.mode=checkid_setup&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.ns.pape=http%3A%2F%2Fspecs.openid.net%2Fextensions%2Fpape%2F1.0&openid.pape.max_auth_age=10000000&openid.return_to=https%3A%2F%2Fwww.amazon.com%2Ffavicon.ico",
-            name: "Amazon"
-        }, {
-            url: "https://www.pinterest.com/login/?next=https%3A%2F%2Fwww.pinterest.com%2Ffavicon.ico",
-            name: "Pinterest"
-        }, {
-            url: "https://www.netflix.com/Login?nextpage=%2Ffavicon.ico",
-            name: "Netflix"
-        }, {
-            url: "https://de.foursquare.com/login?continue=%2Ffavicon.ico",
-            name: "Foursquare"
-        }, {
-            url: "https://eu.battle.net/login/de/index?ref=http://eu.battle.net/favicon.ico",
-            name: "Battle.net"
-        }, {
-            url: "https://store.steampowered.com/login/?redir=favicon.ico",
-            name: "Steam"
-        }, {
-            url: "https://www.academia.edu/login?cp=/favicon.ico&cs=www",
-            name: "Academia.edu"
-        }, {
-            url: "https://stackoverflow.com/users/login?ssrc=head&returnurl=http%3a%2f%2fstackoverflow.com%2ffavicon.ico",
-            name: "Stack Overflow"
-        },, {
-            url: "https://accounts.google.com/ServiceLogin?service=blogger&hl=de&passive=1209600&continue=https://www.blogger.com/favicon.ico",
-            name: "Blogger"
-        }];
-
-
-
-        function print(msg,color) {
-            document.getElementById('socialMedia').innerHTML += '<div style="color:'+color+';">'+msg + '</div>';
-        }
-        networks.forEach(function(network) {
-            var img = document.createElement('img');
-            img.src = network.url;
-            img.onload = function() {
-                print(network.name + ': logged in','green');
-            };
-            img.onerror = function() {
-                // print(network.name + ': not logged in');
-            };
-        });
-    }());
-</script>
 
 </html>
