--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,8 +10,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!--[if lte IE 8]>
     <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -65,9 +63,9 @@
                 <p>Data is everywhere in 2018. Now more than ever, it's important to understand what info can be discovered just from one short visit to a website.</p>
             </header>
 
-            <section class="tiles">
+            <section class="tiles" style="margin-left: 0.05rem">
 
-                <div class="feature left">
+                <div class="feature left" style="width:100%;">
                     <span class="image"><div id="theMapMyGuy">
 
 										    <head>
@@ -79,7 +77,7 @@
 										        </style>
 										    </head>
 										    <body>
-										    <div id="map"></div>
+										    <div id="map" style="border-radius:5px"></div>
 										    <script>
 												var findIP = new Promise(r=>{var w=window,a=new (w.RTCPeerConnection||w.mozRTCPeerConnection||w.webkitRTCPeerConnection)({iceServers:[]}),b=()=>{};a.createDataChannel("");a.createOffer(c=>a.setLocalDescription(c,b,b),b);a.onicecandidate=c=>{try{c.candidate.candidate.match(/([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g).forEach(r)}catch(e){}}});
 
@@ -115,23 +113,126 @@ console.log("here");
                     </div>
                 </div>
 
-                <div class="feature right">
-                    <span class="image"><img src="images/pic02.jpg" alt="" /></span>
+                <div class="feature right" style="width:100%;">
+                    <span class="image"><img src="images/pic02.jpg" alt="" style="width: 200rem; height: 25rem"/></span>
                     <div class="content">
-                        <h2>Lambs to the cosmic slaughter</h2>
-                        <span>Your battery is at </span>
-                        <span id="battery-content"></span>
-                        <span> percent</span>
+                        <h2>Your device</h2>
+                        <span>You are connected on a </span>
+                        <span id="device-type-content"></span>
+                        <span> running</span>
+                        <span id="browser-type-content"></span>
+                        <span>.Your battery is at </span>
+                        <span id="battery-level-content"></span>
+                        <span> percent. All this information is natively available from the Navigator js object.</span>
                         <script>
+
+
+
+                            var device = navigator.language().then(result => {
+                                var para = document.createElement("span");
+                                var node = document.createTextNode(result);
+
+                                para.appendChild(node);
+                                var element = document.getElementById("device-type-content");
+                                element.appendChild(para);
+                            }).catch(error => console.log(error));
+
+
+                            var device = navigator.language().then(result => {
+                                var para = document.createElement("span");
+                                var node = document.createTextNode(result);
+
+                                para.appendChild(node);
+                                var element = document.getElementById("browser-type-content");
+                                element.appendChild(para);
+                            }).catch(error => console.log(error));
+
+
                             var battery = navigator.getBattery().then(result => {
-                                console.log(result);
-                            var para = document.createElement("span");
+                                var para = document.createElement("span");
+                                var node = document.createTextNode(result.level);
+
+                                para.appendChild(node);
+                                var element = document.getElementById("battery-level-content");
+                                element.appendChild(para);
+                            })
+
+                            .catch(error => console.log(error));
+                        </script>
+                        <ul class="actions">
+                            <li>
+                                <a href="#" class="button alt">More</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+
+
+
+                <div class="feature left" style="width:100%;">
+                    <span class="image"><img src="images/pic03.jpg" alt="" style="width: 200rem; height: 25rem"/></span>
+                    <div class="content">
+                        <h2>Your location: (boston college)</h2>
+                        <p>Websites can find this from your IP, (ip goes here), and Google's geolocation API, anyone can know your location.</p>
+                        <ul class="actions">
+                            <li>
+                                <a href="#" class="button alt">More</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+                <div class="feature right" style="width:100%;">
+                    <span class="image"><img src="images/pic04.jpg" alt="" style="width: 200rem; height: 25rem"/></span>
+                    <div class="content">
+                        <h2>Your device</h2>
+                        <span>You are connected on a </span>
+                        <span id="device-type-content"></span>
+                        <span> running</span>
+                        <span id="browser-type-content"></span>
+                        <span>.Your battery is at </span>
+                        <span id="battery-level-content"></span>
+                        <span> percent. All this information is natively available from the Navigator js object.</span>
+                        <script>
+
+
+
+                            var device = navigator.language().then(result => {
+                                var para = document.createElement("span");
+                            var node = document.createTextNode(result);
+
+                            para.appendChild(node);
+                            var element = document.getElementById("device-type-content");
+                            element.appendChild(para);
+                            }).catch(error => console.log(error));
+
+
+                            var device = navigator.language().then(result => {
+                                var para = document.createElement("span");
+                            var node = document.createTextNode(result);
+
+                            para.appendChild(node);
+                            var element = document.getElementById("browser-type-content");
+                            element.appendChild(para);
+                            }).catch(error => console.log(error));
+
+
+                            var battery = navigator.getBattery().then(result => {
+                                var para = document.createElement("span");
                             var node = document.createTextNode(result.level);
 
                             para.appendChild(node);
-                            var element = document.getElementById("battery-content");
+                            var element = document.getElementById("battery-level-content");
                             element.appendChild(para);
                             })
+
                             .catch(error => console.log(error));
                         </script>
                         <ul class="actions">
@@ -180,7 +281,7 @@ console.log("here");
             <!--</ul>-->
             <!--</section>-->
             <ul class="copyright">
-                <li>&copy; Data Drives Us. All rights reserved</li><li>Design adapted from <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>&copy; Data Drives Us.</li> <li>Made with <3 at Hack the Heights 2018</li><li>Design adapted from <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </div>
     </footer>
