Added computer info.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -112,18 +112,18 @@
                     </div>
                 </div>
 
-                <div class="feature right">
+                <div class="feature left">
                     <span class="image"><img src="images/pic01.jpg" alt="" /></span>
                     <div class="content">
-                        <h2>Your battery information</h2>
-                        <span>Your battery is at: </span>
-                        <span id="other-content"></span>
-                        <span> percent</span>
-                        <ul class="actions">
-                            <!-- <li>
-                                <a href="#" class="button alt">More</a>
-                            </li> -->
-                        </ul>
+                        <h2>Information about your computer</h2>
+                        <span>You are browsing using: </span>
+                        <span id="browser-content"></span>
+                        <br>
+                        <span>Your computer is running: </span>
+                        <span id="os-content"></span>
+                        <br>
+                        <span>Your platform is: </span>
+                        <span id="platform-content"></span>
                     </div>
                 </div>
 
