--- a/views/index.hbs
+++ b/views/index.hbs
@@ -127,6 +127,15 @@
                     </div>
                 </div>
 
+                <div class="feature right">
+                    <span class="image"><img src="images/pic02.jpg" alt="" /></span>
+                    <div class="content loggedIn">
+                        <h2>You are logged in on</h2>
+                        <span id="loggedIn"></span>
+                        
+                    </div>
+                </div>
+
             </section>
         </div>
     </div>
